--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@ titlename: 关于
 ---
 
 <h3>关于作者</h3>
-<p style=font-size:18px>洛阳亲友如相问，就说我再敲代码。</p>
+<p style=font-size:18px>不是梦想离我们太远，只是我们为之付出的太少。</p>
 
 <center><img src="/public/img/about.png" style="width:40%"></center>
 
@@ -25,7 +25,7 @@ titlename: 关于
 <a href="mailto:{{ site.author.email }}">
   <i class="fa fa-envelope-o fa-lg" style="color:#16a095;"></i>
 </a>
-<a href="{{ site.author.music }}">
+<a href="#">
   <i class="fa fa-music fa-lg" style="color:#16a095;"></i>
 </a>
 <hr>
